--- a/resources/assets/sass/_navbar.scss
+++ b/resources/assets/sass/_navbar.scss
@@ -1,6 +1,12 @@
 .navbar {
   img.logo-small {
-    width: 225px;
-    height: auto;
+    height: 60px;
   }
+}
+
+.top-bar {
+  color: #f4f6f5;
+  font: Roboto;
+  background-color: #143753;
+  padding: 10px;
 }
