bidders overview container

--- a/resources/assets/sass/_auction.scss
+++ b/resources/assets/sass/_auction.scss
@@ -66,9 +66,9 @@
       margin: 15px;
       span {
         color: #143753;
-        font-weight: 550;
+
       }
-      span.spent{ color: #ff5722; }
+      span.spent{ color: #ff5722; font-weight: 550; }
     }
 
   }
