--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13534,11 +13534,11 @@ a.text-dark:focus {
 
 .auction .auction-room .money-spent span {
   color: #143753;
-  font-weight: 550;
 }
 
 .auction .auction-room .money-spent span.spent {
   color: #ff5722;
+  font-weight: 550;
 }
 
 .chat {
@@ -13641,6 +13641,28 @@ a.text-dark:focus {
   margin-left: auto;
   margin-right: auto;
   text-align: center;
+}
+
+.bidders-overview {
+  background-color: #143753;
+  width: 100%;
+  height: 100%;
+  border-radius: 4px;
+  padding: 15px;
+  border: 1px solid #707070;
+}
+
+.bidders-overview h3 {
+  color: #fff;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.bidders-overview .bidder-card {
+  background-color: #fff;
+  width: 100%;
+  padding: 15px;
+  border: 1px solid #707070;
 }
 
 .navbar-laravel {
