--- a/resources/assets/sass/_bidders-overview.scss
+++ b/resources/assets/sass/_bidders-overview.scss
@@ -14,4 +14,10 @@
     margin-top: 10px;
     margin-bottom: 10px;
   }
+  p,span {
+    color: #143753;
+    font-weight: bolder;
+    margin: 0px;
+  }
+  .players-needed { color: #ff5722; }
 }
