--- a/resources/assets/sass/_navbar.scss
+++ b/resources/assets/sass/_navbar.scss
@@ -8,5 +8,14 @@
   color: #f4f6f5;
   font: Roboto;
   background-color: #143753;
-  padding: 10px;
+  padding: 15px;
+  .owner-tools {
+    .icons { margin-top: 5px; margin-right: 10px;}
+    a { color: #fff; }
+    text-align: right;
+    span { width: 175px;}
+    .dropdown-menu{
+      a { color: #143753; }
+    }
+  }
 }
