--- a/resources/assets/sass/_bidders-overview.scss
+++ b/resources/assets/sass/_bidders-overview.scss
@@ -4,7 +4,7 @@
   height: 100%;
   border-radius: 4px;
   padding: 10px;
-  border: 1px solid #707070;
+  // border: 1px solid #707070;
   h3 {color: #fff; font-size: 16px; font-weight: bold;}
   .bidder-card {
     background-color: #fff;
