--- a/resources/assets/sass/_chat.scss
+++ b/resources/assets/sass/_chat.scss
@@ -1,36 +1,54 @@
-.chat {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
+.chat-widget {
 
-.chat li {
-  margin-bottom: 10px;
-  padding-bottom: 5px;
-  border-bottom: 1px dotted #B3A9A9;
-}
+  button {
+    border-radius: 16px;
+    width: 78px;
+    height: 22px;
+    padding: 0px;
+    font-size: 14px;
+    color: #143753;
+    font-weight: bold;
+    background-color: #fff;
+    margin-left: 15px;
+    margin-right: 15px;
+  }
 
-.chat li .chat-body p {
-  margin: 0;
-  color: #777777;
-}
+  .chat {
+    list-style: none;
+    margin: 0;
+    padding: 0;
 
-.panel-body {
-  overflow-y: scroll;
-  height: 350px;
-}
+  }
 
-::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-  background-color: #F5F5F5;
-}
+  .chat li {
+    margin-bottom: 10px;
+    padding-bottom: 5px;
+    border-bottom: 1px dotted #B3A9A9;
+  }
 
-::-webkit-scrollbar {
-  width: 12px;
-  background-color: #F5F5F5;
-}
+  .chat li .chat-body p {
+    margin: 0;
+    color: #777777;
+  }
 
-::-webkit-scrollbar-thumb {
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-  background-color: #555;
+  .panel-body {
+    overflow-y: scroll;
+    height: 225px;
+  }
+
+  ::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: #F5F5F5;
+  }
+
+  ::-webkit-scrollbar {
+    width: 12px;
+    background-color: #F5F5F5;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: #555;
+  }
+
 }
