--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13485,6 +13485,21 @@ a.text-dark:focus {
   margin-bottom: 35px;
 }
 
+.auction ::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #F5F5F5;
+}
+
+.auction ::-webkit-scrollbar {
+  width: 12px;
+  background-color: #F5F5F5;
+}
+
+.auction ::-webkit-scrollbar-thumb {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #555;
+}
+
 .auction input::-webkit-outer-spin-button,
 .auction input::-webkit-inner-spin-button {
   /* display: none; <- Crashes Chrome on hover */
@@ -13615,21 +13630,6 @@ a.text-dark:focus {
 .chat-widget .panel-body {
   overflow-y: scroll;
   height: 225px;
-}
-
-.chat-widget ::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  background-color: #F5F5F5;
-}
-
-.chat-widget ::-webkit-scrollbar {
-  width: 12px;
-  background-color: #F5F5F5;
-}
-
-.chat-widget ::-webkit-scrollbar-thumb {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  background-color: #555;
 }
 
 .bidding {
