--- a/resources/assets/sass/_auction.scss
+++ b/resources/assets/sass/_auction.scss
@@ -2,6 +2,20 @@
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 35px;
+  ::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: #F5F5F5;
+  }
+
+  ::-webkit-scrollbar {
+    width: 12px;
+    background-color: #F5F5F5;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: #555;
+  }
   input::-webkit-outer-spin-button,
   input::-webkit-inner-spin-button {
       /* display: none; <- Crashes Chrome on hover */
