--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13475,6 +13475,18 @@ a.text-dark:focus {
   color: #143753;
 }
 
+.top-bar button {
+  border-radius: 16px;
+  height: 22px;
+  padding: 0px 15px 0px 15px;
+  font-size: 14px;
+  color: #fff;
+  font-weight: medium;
+  background-color: #3ac9d1;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
 .dashboard {
   background-color: #f5f6fa;
 }
@@ -13717,6 +13729,10 @@ a.text-dark:focus {
   padding: 10px;
 }
 
+.bidders-overview a:hover {
+  text-decoration: none;
+}
+
 .bidders-overview h3 {
   color: #fff;
   font-size: 16px;
@@ -13753,5 +13769,22 @@ a.text-dark:focus {
   box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.75);
   margin-top: 10px;
   margin-bottom: 10px;
+}
+
+.blinking {
+  -webkit-animation: blinker 0.35s linear infinite;
+          animation: blinker 0.35s linear infinite;
+}
+
+@-webkit-keyframes blinker {
+  50% {
+    opacity: 0;
+  }
+}
+
+@keyframes blinker {
+  50% {
+    opacity: 0;
+  }
 }
 
