--- a/resources/assets/sass/_navbar.scss
+++ b/resources/assets/sass/_navbar.scss
@@ -18,4 +18,16 @@
       a { color: #143753; }
     }
   }
+  button {
+    border-radius: 16px;
+    height: 22px;
+    padding: 0px 15px 0px 15px;
+    font-size: 14px;
+    color: #fff;
+    font-weight: medium;
+    background-color: #3ac9d1;
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+
 }
