--- a/resources/assets/sass/_bidding.scss
+++ b/resources/assets/sass/_bidding.scss
@@ -3,6 +3,9 @@
   background-color: #fe5722;
 
   .bidding-controls {
+    span {
+      font-size: 24px;
+    }
     p, small {
       font-size: 14px;
       font-weight: 550;
