--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13667,19 +13667,24 @@ a.text-dark:focus {
   padding-right: 25px;
 }
 
+.bidding .bidding-controls label {
+  color: #fff;
+}
+
 .bidding .bidding-controls span {
   font-size: 24px;
 }
 
 .bidding .bidding-controls p,
-.bidding .bidding-controls small {
+.bidding .bidding-controls small,
+.bidding .bidding-controls label {
   font-size: 14px;
   font-weight: 550;
   color: #fff;
   margin: 2px;
 }
 
-.bidding .bidding-controls button {
+.bidding .bidding-controls button.bid-button {
   border-radius: 16px;
   width: 78px;
   height: 22px;
