--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -27,11 +27,7 @@
 }
 
 .card {
-  -webkit-box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
-  -moz-box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
-  box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
-  margin-top: 10px;
-  margin-bottom: 10px;
+
 }
 
 .card-header {
@@ -46,4 +42,8 @@
   50% {
     opacity: 0;
   }
+}
+
+.vue-grid-item {
+
 }
