--- a/resources/assets/sass/_auction.scss
+++ b/resources/assets/sass/_auction.scss
@@ -42,8 +42,8 @@
       font-weight: 600;
     }
     .widget-body {
-      // max-height: 225px;
-      overflow: auto;
+      max-height: 225px;
+      // overflow: auto;
     }
     .scrollable {
       overflow-y: scroll;
