--- a/resources/assets/sass/_auction.scss
+++ b/resources/assets/sass/_auction.scss
@@ -1,4 +1,7 @@
 .auction {
+
+  // background-color: #2095f2;
+
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 35px;
@@ -42,7 +45,8 @@
       font-weight: 600;
     }
     .widget-body {
-      max-height: 225px;
+      max-height: 325px;
+      // max-height: 20%;
       // overflow: auto;
     }
     .scrollable {
