--- a/resources/assets/sass/_navbar.scss
+++ b/resources/assets/sass/_navbar.scss
@@ -5,24 +5,35 @@
 }
 
 .top-bar {
+  height: 23px;
+
+  font-size: 12px;
   color: #f4f6f5;
-  font: Roboto;
   background-color: #143753;
-  padding: 15px;
+  padding: 2px 20px 2px 20px;
   .owner-tools {
-    .icons { margin-top: 5px; margin-right: 10px;}
-    a { color: #fff; }
+    a {
+      color: #fff;
+      padding: 0px;
+    }
     text-align: right;
-    span { width: 175px;}
-    .dropdown-menu{
-      a { color: #143753; }
+    span {
+      width: 175px;
+    }
+    .dropdown-menu {
+
+      a {
+        color: #143753;
+        padding-left: 10px;
+      }
+      a:hover {
+        background-color: #fe5722;
+      }
     }
   }
   button {
     border-radius: 16px;
-    height: 22px;
-    padding: 0px 15px 0px 15px;
-    font-size: 14px;
+    font-size: 12px;
     color: #fff;
     font-weight: medium;
     background-color: #3ac9d1;
